# PP_works

./: .gitignore
1_task/: CMakeLists.txt  README.md  task_1.cpp
2_task/2_1_task/: CMakeLists.txt  results_20000.csv  results_40000.csv  task_2_1.cpp
2_task/2_2_task/: CMakeLists.txt  main.cpp  plot.py  results.csv
2_task/2_3_task/: main_1.cpp  main_2.cpp  main_schedule.cpp  plot.py  plot_schedule.py  result1.csv  result2.csv  schedule_results.csv
3_task/3_1_task/: 3_1_task.cpp  CMakeLists.txt  plot.py  results_20000.csv  results_40000.csv
3_task/3_2_task/: 3_2_task  3_2_task.cpp  CMakeLists.txt  pow_results.csv  pow_results.txt  sin_results.csv  sin_results.txt  sqrt_results.csv  sqrt_results.txt  test_result.cpp
4_task/: main.py  main_test.py
5_task/: main_video.py  result.csv
6_task/: main.cpp
7_task/: CMakeLists.txt  main.cpp  run_benchmarks.sh
